--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: "Argo Navis:\nJason's blog about data and science"
+title: "Argo Navis: data and science"
 description: "I prefer hand-crafted artisanal small-batch data.  Especially if it's barrel-aged."
 github_username: jasongfleischer
 # you can comment the below line out if your repo name is not different than your baseurl
