--- a/_config.yml
+++ b/_config.yml
@@ -69,8 +69,8 @@ include:
 # This specifies what badges are turned on by default for notebook posts.
 default_badges:
   github: true
-  binder: true
-  colab: true
+  binder: false
+  colab: false
 
 # Everything below here should be left alone. Modifications may break fastpages
 future: true
